Modified Introduction and Data Sections for first part of submission for grading.

--- a/Course9_Capstone/Week4/Intro_Data_Only.ipynb
+++ b/Course9_Capstone/Week4/Intro_Data_Only.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "In the 2016 U.S. Presidential election, Donald J. Trump famously won the electoral college vote (although he lost the popular vote), despite the popularly held convention that he couldn't win, and was behind in most predictive polls. Some have said that the media and people on the left of the political spectrum just did not want to believe that Trump could possibly win, and therefore ignored what was evident in the statistical polling data. However, the polls really did show a strong preference for Clinton over Trump. It's unclear as to why the polls were so wrong, but begs the question: are there other ways to explain the way a state, district, or precinct votes?\n",
     "\n",
-    "In theory, the President of the United States makes policy and guides the nation in tangible and intangible ways. Therefore, understanding how the U.S. electorate votes for the President has consequences for everyone. There are innumerable ways to do this, but this work examines the stereotype that rural areas vote Republican and urban areas vote Democrat. "
+    "In theory, the President of the United States makes policy and guides the nation in tangible and intangible ways. Therefore, the mechanics of how the U.S. electorate votes for the President has consequences for everyone. There are innumerable ways to do this, but this work examines the stereotype that rural areas vote Republican and urban areas vote Democrat. "
    ]
   },
   {
@@ -24,7 +24,7 @@
    "source": [
     "## Data Acquisition, Cleaning & Exploration\n",
     "\n",
-    "In order to make the problem of \"rural\" versus \"urban\" voting more manageable, the focus has been narrowed from the whole country down to the swing-state of Ohio only. We need three different sets of data: (1) Ohio precinct-level raw vote counts; (2) Ohio precinct shapes/boundaries in latitude/longitude format; and, (3) some sort of data reflecting the rural or urban nature of the precinct. "
+    "In order to make the problem of \"rural\" versus \"urban\" voting preferences more manageable, the focus has been narrowed from the whole country down to the swing-state of Ohio only. We need three different sets of data: (1) Ohio precinct-level raw vote counts; (2) Ohio precinct shapes/boundaries in latitude/longitude format; and, (3) some sort of data reflecting the rural or urban nature of the precinct. "
    ]
   },
   {
@@ -33,7 +33,7 @@
    "source": [
     "#### Data: Precinct Shapes & Raw Vote Counts\n",
     "\n",
-    "I was shocked to find that raw precinct-level voting data information is not publicly available from state or federal agencies. In fact, only aggregated voting district counts (districts are made up of precincts) are available. After much online sleuthing, I tracked down the data I needed from the Metric Geometry and Gerrymandering Group (MGGG). The main goal of the MGGG is actually to \"find out what type of data \\[they\\] could obtain from the individual counties in Ohio on their precinct boundaries, and to work towards turning that into a unified statewide shapefile.\" Available from their GitHub repository (https://github.com/mggg/ohio-precincts), the MGGG provides a GeoPandas (http://geopandas.org) geopackage shape file containing raw votes and shape coordinates for each precinct. Only a handful of precincts were unable to be developed, and so, are not included in the analysis that follows.\n",
+    "I was shocked to find that raw precinct-level voting data information is not publicly available from state or federal agencies. In fact, only aggregated voting district counts (districts are made up of precincts) are available. After much online sleuthing, I tracked down the data I needed from the Metric Geometry and Gerrymandering Group (MGGG). The main goal of the MGGG is actually to \"find out what type of data \\[they\\] could obtain from the individual counties in Ohio on their precinct boundaries, and to work towards turning that into a unified statewide shapefile.\" Available from their GitHub repository (https://github.com/mggg/ohio-precincts), the MGGG provides a GeoPandas (http://geopandas.org) geopackage shape file containing raw votes and shape coordinates for each precinct. They were not able to develop only a handful of precincts, and so, these are not included in the analysis that follows.\n",
     "\n",
     "So let's take a look at this GeoPandas data:"
    ]
@@ -495,7 +495,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we can see, in this dataframe, we now have the first and second data sets we require for the proposed analysis. Each row contains precinct information, followed by raw vote counts, and the final column contains the geopackage shape data. The geopackage shape data provides location data to define the boundaries of each precinct. In the following section, we will be acquiring venue (restaurants, stores, etc.) data for each precinct. In order to do this, we will need a central location data point for each precinct. Therefore, we calculate the precinct centroid using the precinct boundary data."
+    "As we can see, in this dataframe, we now have the first and second data sets we require for the proposed analysis. Each row contains precinct indentification information, followed by raw vote counts, and the final column contains the geopackage precinct shape data. The geopackage shape data provides location data to define the boundaries of each precinct. In the following section, we will be acquiring venue (restaurants, stores, etc.) data for each precinct. In order to do this, we will need a central location data point for each precinct. Therefore, we calculate each precinct centroid using the precinct boundary data."
    ]
   },
   {
@@ -1484,7 +1484,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ok, this is all we need for the next section. However, let's do a little bit more work here by creating a binary \"winner\" column (0=Trump, 1=Clinton) and plot all precincts colored (red=Trump, blue=Clinton)."
+    "Ok, this is all we need for the next section. However, let's do a little bit more work here by creating a binary \"winner\" column (0=Trump, 1=Clinton) and plot all precincts colored by \"winner\" (red=Trump, blue=Clinton)."
    ]
   },
   {
@@ -2027,7 +2027,7 @@
    "source": [
     "#### Data: Defining Rural and Urban Precincts\n",
     "\n",
-    "The third data set we need must somehow characterize \"rural\" and \"urban\" voting areas. To do this, we will utilize Foursquare (www.foursquare.com) venue data to generate feature sets for each precinct. The feature sets will contain be comprised of the category types (i.e. \"Italian Restaurant\", \"Gas Station\", \"Auto Mechanic\", etc.) for the venues found in each precinct. Calls to the Foursquare API return JSON information, which we will tranform into a Pandas dataframe for analysis. Although we won't initially label precincts as rural or urban, once we have done some analysis, we will see if there are voting patterns for precincts with very few, or zero, venues (presumed to be rural), versus precincts with many venues (presumed to be urban).\n",
+    "The third data set we need must somehow characterize \"rural\" and \"urban\" voting areas. To do this, we will utilize Foursquare (www.foursquare.com) venue data to generate feature sets for each precinct. The feature sets will be comprised of the category types (i.e. \"Italian Restaurant\", \"Gas Station\", \"Auto Mechanic\", etc.) for the venues found in each precinct. Calls to the Foursquare API return JSON information, which we will tranform into a Pandas dataframe for analysis. Although we won't initially label precincts as rural or urban, once we have done some analysis, we will see if there are voting patterns for precincts with very few, or zero, venues (presumed to be rural), versus precincts with many venues (presumed to be urban).\n",
     "\n",
     "Let's take a look at the Foursquare data:"
    ]
@@ -2127,25 +2127,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It should be noted that \"The Foursquare API has a limit of 950 Regular API Calls per day\". However, by verifying your Foursquare account with a credit card (which is not charged), this limit is raised to 99,500 calls per day. The following raw text cell shows the code to request the Foursquare data, but is not used here. Instead I have previously run this code and saved the Foursquare data to CSV file, since getting this information from the Foursquare API is time consuming."
+    "It should be noted that \"The Foursquare API has a limit of 950 Regular API Calls per day\". However, by verifying your Foursquare account with a credit card (which is not charged), this limit is raised to 99,500 calls per day. The following raw text cell shows the code to request the Foursquare data, but is not used here. Instead I have previously run this code and saved the Foursquare data to CSV file, since getting this information from the Foursquare API can be time consuming."
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "# call the function\n",
-    "precinct_venues = getNearbyVenues(names=pd.Series(ohio_df.index.values),\n",
-    "                                 latitudes=ohio_df['centroid_lat'],\n",
-    "                                 longitudes=ohio_df['centroid_lon']\n",
-    "                                 )"
+    "# # call the function\n",
+    "# precinct_venues = getNearbyVenues(names=pd.Series(ohio_df.index.values),\n",
+    "#                                  latitudes=ohio_df['centroid_lat'],\n",
+    "#                                  longitudes=ohio_df['centroid_lon']\n",
+    "#                                  )"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Load the Foursquare venue data that I had previously save to a CSV file:"
+    "Load the Foursquare venue data that I had previously saved to a CSV file:"
    ]
   },
   {
@@ -2324,9 +2326,9 @@
     "\n",
     "- Analyze results of clustering. \n",
     "\n",
-    "- If results are good, characterize the clusters based on their common features. \n",
+    "- If results are good, characterize the clusters based on their respective features. \n",
     "\n",
-    "- If the results are not good, consider feature selection, application of other machine learing techniques (other clustering algorithms, and classification algortihms, changing the radius in which venues are found for each precinct)."
+    "- If the results are not good, consider feature selection (food-related venues only?) or application of other machine learing techniques (other clustering algorithms, and classification algortihms, changing the radius in which venues are found for each precinct)."
    ]
   }
  ],
