Capstone data methodology stuff.

--- a/Course9_Capstone/Week4/Intro_Data_Only.ipynb
+++ b/Course9_Capstone/Week4/Intro_Data_Only.ipynb
@@ -2072,7 +2072,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2136,11 +2136,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # call the function\n",
-    "# precinct_venues = getNearbyVenues(names=pd.Series(ohio_df.index.values),\n",
-    "#                                  latitudes=ohio_df['centroid_lat'],\n",
-    "#                                  longitudes=ohio_df['centroid_lon']\n",
-    "#                                  )"
+    "# call the function\n",
+    "precinct_venues = getNearbyVenues(names=pd.Series(ohio_df.index.values),\n",
+    "                                 latitudes=ohio_df['centroid_lat'],\n",
+    "                                 longitudes=ohio_df['centroid_lon']\n",
+    "                                 )"
    ]
   },
   {
