Capstone_Final conclusion.

--- a/Course9_Capstone/Week4/Capstone_Final.ipynb
+++ b/Course9_Capstone/Week4/Capstone_Final.ipynb
@@ -15,7 +15,9 @@
     "\n",
     "In the 2016 U.S. Presidential election, Donald J. Trump won the electoral college vote (although he lost the popular vote). Despite the popularly held convention that he couldn't win, and was behind in most predictive polls, he did manage a clear electoral college victory. Some have said that the media and people on the left of the political spectrum just did not want to believe that Trump could possibly win, and therefore ignored what was evident in the statistical polling data. However, the polls really did show a strong preference for Clinton over Trump. It's unclear as to why the polls were so wrong, but begs the question: are there other ways to explain the way a state, district, or precinct votes?\n",
     "\n",
-    "In theory, the President of the United States makes policy and guides the nation in tangible and intangible ways. Therefore, the mechanics of how the U.S. electorate votes for the President has consequences for everyone. There are innumerable ways to do this, but this work examines the stereotype that rural areas vote Republican and urban areas vote Democrat. The results are used to build a model that predicts how an Ohio voting precinct will vote based soley on the venues, businesses, and services available to that precinct."
+    "In theory, the President of the United States makes policy and guides the nation in tangible and intangible ways. Therefore, the mechanics of how the U.S. electorate votes for the President has consequences for everyone. There are innumerable ways to do this. The Economist's article on forecasting an American's vote (https://www.economist.com/graphic-detail/2018/11/03/how-to-forecast-an-americans-vote) compares voter charactertistcs, and found that religion was the single best predictor of voting preferences. The model found that religion could accurately predict a preference for Democratic voting about 87% of the time and a preference for Republican voting about 80% of the time. Other characterstics included *race*, *sexual orientation*, *education*, *age*, *gender*, etc. *Region* and *population density* were also included, both with average predictions in the 50%-60% accuracy range.\n",
+    "\n",
+    "The hypothesis of this work is that the rural or urban nature of a region has a predictive power much greater than the *region* and *population density* characteristics in The Economist's model. Therefore, the stereotype that rural areas vote Republican and urban areas vote Democrat will be explored in more detail by quantifying a region's *rural*ness or *urban*ness by using the the venues, businesses, and services in that region. The result will be a model that predicts how an Ohio voting precinct will vote based solely on the venues, businesses, and services available to that precinct."
    ]
   },
   {
@@ -10899,7 +10901,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Methodology\n",
+    "## Methodology & Results\n",
     "\n",
     "In this section, the data will be explored via combination of clustering and classification algortihms. First, a clustering algorithm will be employed to see if the venue data alone is sufficient to cluster the precincts in accordance with the 2016 Presidential election results. It will be shown that the venue data alone is not sufficient, but including the results themselves does allow for some sub-class (within Republican and Democratic precincts) delineation. \n",
     "\n",
@@ -10910,7 +10912,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Methodology: Clustering with K-Means (k=2)"
+    "#### Methodology & Results: Clustering with K-Means (k=2)\n",
+    "\n",
+    "A thorough explanation of the k-means clustering method is beyond the scope of this work. But, the sci-kit learn online User Guide (https://scikit-learn.org/stable/modules/clustering.html#k-means), and, of course, WikiPedia (https://en.wikipedia.org/wiki/K-means_clustering), are good places to start."
    ]
   },
   {
@@ -15129,7 +15133,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Methodology: Clustering with K-Means (k=3,5,10)"
+    "#### Methodology & Results: Clustering with K-Means (k=3,5,10)"
    ]
   },
   {
@@ -15255,7 +15259,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Methodology: Data exploration using k-means clustering (k=3)\n",
+    "#### Methodology & Results: Data exploration using k-means clustering (k=3)\n",
     "\n",
     "If the results of the election are included in the feature set, along with the venue categories, the k-means clustering algorithm can provide some further understanding of the precincts beyond merely separating the precincts by election results alone. This new one-hot matrix data will be separated into a dataframe for each cluster so that they can be characterized. So, rather than use the method we used above, it must be modified so that the selected one-hot columns also include the 'winner_binary' column."
    ]
@@ -20266,9 +20270,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Methodology: Classification algorthim set-up\n",
+    "#### Methodology & Results: Classification algorthim set-up\n",
     "\n",
-    "So, the venue category information has provided some insight into the nature of Democratic and Republican precincts in Ohio. Now, classification algorithms will be used to ascertain the power of the venue catoregy data alone to predict the election results of Ohio voting precincts. The classification algortihms to be tested are Decision Trees (DT), K-Nearest Neighbors (KNN), Support Vector Machines (SVM), and Logistic Regression (LR). Parametric studies will be done for all four classification algorthims and the best results, in terms of the Jaccard Similarity Score, will be used for further analysis in the following sections.\n",
+    "So, the venue category information has provided some insight into the nature of Democratic and Republican precincts in Ohio. Now, classification algorithms will be used to ascertain the power of the venue catoregy data alone to predict the election results of Ohio voting precincts. The classification algortihms to be tested are Decision Trees (DT), K-Nearest Neighbors (KNN), Support Vector Machines (SVM), and Logistic Regression (LR). Parametric studies will be done for all four classification algorthims and the best results, in terms of the Jaccard Similarity Score, will be used for further analysis in the following sections. It is beyond the scope of this work to provide details on the classification algorithms, but per usual, the sci-kit learn online User Guide and WikiPedia are very helpful.\n",
     "\n",
     "But, first, the one-hot venue category information for all precincts must be split into training and testing datasets. (It should be noted explicitly that, unlike the preceding cluster data exploration work, the precinct election results are obviously **not** used in the feature set here. Rather, the precinct election results are the target category/classification data set.) Once these training/testing data sets have been created, they will be used to test each of the classification algorthims, without modification."
    ]
@@ -20341,7 +20345,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Methodology: Classification w/ Decision Tree"
+    "#### Methodology & Results: Classification w/ Decision Tree"
    ]
   },
   {
@@ -20425,7 +20429,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Methodology: Classification w/ K-Nearest Neighbors"
+    "#### Methodology & Results: Classification w/ K-Nearest Neighbors"
    ]
   },
   {
@@ -20531,7 +20535,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Methodology: Classification w/ Support Vector Machine"
+    "#### Methodology & Results: Classification w/ Support Vector Machine"
    ]
   },
   {
@@ -20637,7 +20641,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Methodology: Classification w/ Logistic Regression"
+    "#### Methodology & Results: Classification w/ Logistic Regression"
    ]
   },
   {
@@ -20746,7 +20750,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Methodology: Feature selection\n",
+    "#### Methodology & Results: Feature selection\n",
     "\n",
     "Although this is a pretty small data set (roughly 10,000 precincts with roughly 500 features each), there still may be some merit in examining the feature set for redundant and/or irrelevant features. These features can be omitted from the analysis, which can make results easier to understand, reduce computational times (for larger data sets in particular), and limit reduce model variance (overfitting to training data)."
    ]
@@ -20755,7 +20759,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Methodology: Feature selection by food-only related venues\n",
+    "#### Methodology & Results: Feature selection by food-only related venues\n",
     "\n",
     "There are many ways to employ feature selection. The most basic and blunt-force approach is to manually select a subset of features. In this work, two manual selections are made and tested. The first is food-only related venue categories. The second is all non-food related venue categories. Both subsets are used with the best performing classification algorithm (k-nearest neighbors w/ k=2), and the results are shown below."
    ]
@@ -20830,7 +20834,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Methodology: Feature selection by non-food related venues"
+    "#### Methodology & Results: Feature selection by non-food related venues"
    ]
   },
   {
@@ -20900,7 +20904,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Methodology: Feature selection by Correlation Feature Analysis (CFA)\n",
+    "#### Methodology & Results: Feature selection by Correlation Feature Analysis (CFA)\n",
     "\n",
     "This methodology is based on the idea that features that are worth keeping are highly correlated with the target classification category, but not with other features. In other words, only keep features that have a big effect on the classification, and eliminate features that only have a big effect on other features, since they are redundant."
    ]
@@ -21162,7 +21166,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Methodology: Feature selection by Chi-Squared Independence Test\n",
+    "#### Methodology & Results: Feature selection by Chi-Squared Independence Test\n",
     "\n",
     "The Chi-Squared test is employed here to select the *n* \"best\" features from the feature set. This approach is tested for a few different values of n (n=20,50,100). Each of these reduced feature sets are used with the KNN algorithm and the accuracies are compared. The idea here is to reduce the number of features as much as possible, while miitigating the effect on accuracy."
    ]
@@ -21390,6 +21394,15 @@
     "plt.margins(x=0, y=0)\n",
     "plt.savefig('18_oh_wordcloud.png', bbox_inches = \"tight\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conclusion\n",
+    "\n",
+    "In this work, the 2016 Presidential election results from Ohio voting precincts were explored.  The types of businesses and services in those precincts were used in conjunction with the voting data to do the analysis. Using clustering and classification machine-learning techniques on the data yield a couple key results. First, the stereotype that rural area vote Republican and urban area vote Democratic was confirmed. One sub-cluster of Republican precincts was dominated by 'Construction & Landscaping' businesses, and not much else. These precincts could be considered ultra-rural. Classification analysis yielded further insight into the divide between Democratic and Republican precincts. As expected, venues/businesses most closely correlated with Republican precincts tended toward the rural: landscaping, golf courses, campgrounds, farms, lakes, trails, parks, rest areas, etc. Venues/businesses most closely correlated with Democratic precincts included the stereotypically urban: all sorts of ethnic restaurants (including French), coworking spaces, indie theaters, organic groceries, and gay bars. But, ultimately the real power of this data lies in its ability to predict voting patterns. Using the k-nearest neighbors (KNN) classifier, the venue/businesses in a precinct can predict the voting habits of that precinct with about 90% accuracy. Of course, there are some caveats to that number. The venue/business information from Foursquare may not be complete or accurate. Additionally, although the election results were from 2016, the venue/business data was source in 2019. It's possible that venue data from 2016 would be produce a more accurate model. Finally, it would be worth applying this model to other states in midwest and on the coasts, to see if the voting patterns in Ohio are at all applicable elsewhere in the county. But, ultimately, the true power of this model won't be known until the next Presidential election in 2020."
    ]
   }
  ],
