Capstone_Final tweaks.

--- a/Course9_Capstone/Week4/Capstone_Final.ipynb
+++ b/Course9_Capstone/Week4/Capstone_Final.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Capstone Project: Understanding Ohio Voting Precincts"
+    "<h1><center>IBM Data Science Capstone Project: <br /> Predicting Ohio Presidential Voting</center></h1>\n",
+    "<img src=\"18_oh_wordcloud_trim.png\" align=\"center\" style=\"height:400px\"> "
    ]
   },
   {
