--- a/Course9_Capstone/Week4/Capstone_Final.ipynb
+++ b/Course9_Capstone/Week4/Capstone_Final.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "<h1><center>IBM Data Science Capstone Project: <br /> Predicting Ohio Presidential Voting</center></h1>\n",
-    "<img src=\"18_oh_wordcloud_trim.png\" align=\"center\" style=\"height:400px\"> "
+    "<img src=\"./18_oh_wordcloud_trim.png\" align=\"center\" style=\"height:400px\"> "
    ]
   },
   {
