Remove Ohio wordcloud image for intro...

--- a/Course9_Capstone/Week4/Capstone_Final.ipynb
+++ b/Course9_Capstone/Week4/Capstone_Final.ipynb
@@ -4,8 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h1><center>IBM Data Science Capstone Project: <br /> Predicting Ohio Presidential Voting</center></h1>\n",
-    "<img src=\"./18_oh_wordcloud_trim.png\" align=\"center\" style=\"height:400px\"> "
+    "<h1><center>IBM Data Science Capstone Project: <br /> Predicting Ohio Presidential Voting</center></h1>"
    ]
   },
   {
