Capstone_Final notebook done...

--- a/Course9_Capstone/Week4/Capstone_Final.ipynb
+++ b/Course9_Capstone/Week4/Capstone_Final.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h1><center>IBM Data Science Capstone Project: <br /> Predicting Ohio Presidential Voting</center></h1>"
+    "# IBM Data Science Capstone Project: \n",
+    "# Predicting Ohio Presidential Voting "
    ]
   },
   {
@@ -2053,7 +2054,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Data: Characterizing precincts by their venues/businesses/services (Foursqaure data)\n",
+    "#### Data: Characterizing precincts by their venues/businesses/services (Foursquare data)\n",
     "\n",
     "The third data set that is needed must somehow characterize the precincts in a way that lends itself to the rural/urban labeling. To do this, Foursquare (www.foursquare.com) venue data is utilized to generate feature sets for each precinct. The feature sets will be comprised of the venue category types (i.e. \"Italian Restaurant\", \"Gas Station\", \"Auto Mechanic\", etc.) for the venues found in each precinct. Calls to the Foursquare API return JSON information, which will be transformed into a Pandas dataframe for analysis. Although precincts won't iniitally be labeled as as rural or urban, once we have done some analysis, we will see if there are any precinct voting patterns that support the rural/urban stereotypes. "
    ]
@@ -20646,7 +20647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
@@ -20668,17 +20669,6 @@
       "                macro avg       0.86      0.84      0.85      3089\n",
       "             weighted avg       0.88      0.88      0.88      3089\n",
       "\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'yhat_LR_prob' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-105-ef0839e4a11b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     52\u001b[0m \u001b[0;31m# Import and calculate log-loss\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     53\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmetrics\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mlog_loss\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 54\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Log Loss ='\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mlog_loss\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0myhat_LR_prob\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'yhat_LR_prob' is not defined"
      ]
     }
    ],
